# py-claude-code

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ALIGNMENT.md  ARCHITECTURE.md  CONTEXT.md  MESSAGES_SERVER.md
pyccode/: __init__.py  agent.py  auth.py  cli.py  codex_model.py  context.py  doctor.py  model.py  protocol.py  runtime.py  utils.py  visualize.py
pyccode/prompts/: claude_system_block_2.md  claude_system_block_3.md  default_base_instructions.md
pyccode/tools/: __init__.py  apply_patch_tool.py  base_tool.py  claude_tool_runtime.py  exec_command_tool.py  grep_files_tool.py  list_dir_tool.py  placeholder_claude_tool.py  read_file_tool.py  shell_command_tool.py  unified_exec_manager.py  write_stdin_tool.py
tests/: capture_fake_messages_requests.py  capture_nonbare_oauth_request.py  compare_three_way_messages_requests.py  fake_anthropic_messages_server.py  prepare_fake_oauth_home.py  test_agent.py  test_auth.py  test_claude_runtime_tools.py  test_codex_model.py  test_compare_three_way_messages_requests.py  test_context.py  test_doctor.py  test_fake_anthropic_messages_server.py  test_model.py  test_prepare_fake_oauth_home.py  test_runtime.py  test_tool_schemas.py  test_tools.py
